--- a/.github/workflows/build-sonarcloud.yaml
+++ b/.github/workflows/build-sonarcloud.yaml
@@ -51,7 +51,8 @@ jobs:
         shell: pwsh
         run: |          
           dotnet tool install --global dotnet-coverage
-          .\..\.sonar\scanner\dotnet-sonarscanner begin /k:"eraldoads_TechChallenge-Grupo13-Pagamento" /o:"sonarcloud-github-2024" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml          
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"eraldoads_TechChallenge-Grupo13-Pagamento" /o:"sonarcloud-github-2024" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml          
           dotnet build APIPagamento.sln --configuration Release --no-incremental          
           dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"          
-          .\..\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
