--- a/APIPagamento/APIPagamento/appsettings.json
+++ b/APIPagamento/APIPagamento/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionMysql": "Server=localhost;initial catalog=BD_PKFF_PAGAMENTOS;Uid=pkpagamento;Pwd=Fast.Food;"
+    //"ConnectionMysql": "Server=localhost;initial catalog=BD_PKFF_PAGAMENTOS;Uid=pkpagamento;Pwd=Fast.Food;",
+    "ConnectionMongoDB": "mongodb+srv://pkpagamento:Fast.FoodPgto@piklesdev.frtwzhj.mongodb.net/",
+    "databaseName": "piklesfastfood-db"
   }
 }
