--- a/APIPagamento/APIPagamento/APIPagamento.csproj
+++ b/APIPagamento/APIPagamento/APIPagamento.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
+		<PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.0.1" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
