--- a/APIPagamento/App.Test/App.Test.csproj
+++ b/APIPagamento/App.Test/App.Test.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.4" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+		<PackageReference Include="Mongo2Go" Version="3.1.3" />
 		<PackageReference Include="Moq" Version="4.20.70" />
 		<PackageReference Include="xunit" Version="2.8.0" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.8.0" />
