--- a/APIPagamento/Data/Data.csproj
+++ b/APIPagamento/Data/Data.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+		<PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.0.1" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
 	</ItemGroup>
 
