--- a/APIPagamento/Dockerfile
+++ b/APIPagamento/Dockerfile
@@ -8,17 +8,17 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["APIProduto/APIProduto.csproj", "APIProduto/"]
-RUN dotnet restore "./APIProduto/APIProduto.csproj"
+COPY ["APIPagamento/APIPagamento.csproj", "APIPagamento/"]
+RUN dotnet restore "./APIPagamento/APIPagamento.csproj"
 COPY . .
-WORKDIR "/src/APIProduto"
-RUN dotnet build "./APIProduto.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/APIPagamento"
+RUN dotnet build "./APIPagamento.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./APIProduto.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./APIPagamento.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "APIProduto.dll"]
+ENTRYPOINT ["dotnet", "APIPagamento.dll"]
