--- a/APIPagamento/Data/Data.csproj
+++ b/APIPagamento/Data/Data.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
 		<PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.0.1" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 	</ItemGroup>
 
 	<ItemGroup>
