--- a/APIPagamento/APIPagamento/appsettings.json
+++ b/APIPagamento/APIPagamento/appsettings.json
@@ -4,11 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    //"ConnectionMysql": "Server=localhost;initial catalog=BD_PKFF_PAGAMENTOS;Uid=pkpagamento;Pwd=Fast.Food;",
-    "ConnectionMongoDB": "mongodb+srv://pkpagamento:1KHzPZi21vWkmWuN@piklesdev.frtwzhj.mongodb.net/",
-    "databaseName": "piklesfastfood-db"
   }
+  //,
+  "AllowedHosts": "*",
+  //"ConnectionStrings": {
+    //"ConnectionMysql": "Server=localhost;initial catalog=BD_PKFF_PAGAMENTOS;Uid=pkpagamento;Pwd=Fast.Food;",
+  //  "ConnectionMongoDB": "mongodb+srv://pkpagamento:1KHzPZi21vWkmWuN@piklesdev.frtwzhj.mongodb.net/",
+  //  "databaseName": "piklesfastfood-db"
+ // }
 }
